--- a/themes/academic.css
+++ b/themes/academic.css
@@ -16,6 +16,7 @@ section {
   padding-top: 90px;
   padding-left: 40px;
   padding-right: 40px;
+  font-size: 1.7em;
 }
 
 /* https://github.com/marp-team/marpit/issues/271 */
