--- a/themes/academic.css
+++ b/themes/academic.css
@@ -12,7 +12,7 @@
 
 section {
   background-image: none;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'ヒラギノ角ゴシック', 'Noto Sans JP', sans-serif;
   padding-top: 90px;
   padding-left: 40px;
   padding-right: 40px;
