--- a/themes/academic.css
+++ b/themes/academic.css
@@ -12,11 +12,11 @@
 
 section {
   background-image: none;
-  font-family: 'ヒラギノ角ゴシック', 'Noto Sans JP', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   padding-top: 90px;
   padding-left: 40px;
   padding-right: 40px;
-  font-size: 1.5em;
+  font-size: 1.7em;
 }
 
 /* https://github.com/marp-team/marpit/issues/271 */
